# ai-multi-agent-cortex

./: .dockerignore  .env.example  .gitattributes  .gitignore  GUARDRAILS.md  README.md  TECHNICAL.md  docker-compose.yml  langgraph.json  main.py  notebook_evaluation_frameworks.ipynb  pyproject.toml  settings.yaml
.claude/: context.md  plan.md
.next/: trace
agent-chat-ui/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.tsbuildinfo
agent-chat-ui/tests/: composer-actions.test.ts  effort-selection.test.ts  live-agent-status.test.ts
ai/: Dockerfile  pyproject.toml
ai/app/: config.py  main.py
cortex/: __init__.py  config.py  enums.py  errors.py  facts.py  guardrails.py  imagegen.py  local_grounding.py  memory.py  observability.py  workflow.py
cortex/api/: __init__.py  app.py
cortex/config/: __init__.py  azure_openai.py  loader.py  openai.py  settings.py
cortex/db/: engine.py  seed.py
cortex/declarative/: __init__.py  agents.yaml  auto_mode.yaml  models.py  yaml_utils.py
cortex/model_client/: __init__.py  chat_client.py  embedding_client.py  model_health.py
cortex/scripts/: thread_backup.py
cortex/server/: __init__.py  app.py  assistants.py  runs.py  runtime.py  serde.py  threads.py
cortex/tools/: __init__.py  catalog.py  commerce.py  local_specialist.py  mcp.py  memory.py  registry.py  shared.py  spec_table.py  utility.py  web.py
cortex/workflow/: __init__.py  context.py  effort.py  memory.py  (+9 more)
docker/: Dockerfile.evals  Dockerfile.langgraph  Dockerfile.ui
docs/: coding-agent-plan.md
evals/: conftest.py  golden_dataset.json  test_faithfulness.py  test_routing.py  test_security.py
tests/: test_agent_progress.py  test_agent_specs.py  test_checkpoint_serialization.py  test_commerce.py  test_comparison_tables.py  test_dataset_generation.py  test_effort_policy.py  test_local_grounding.py  test_local_model_manager.py  test_local_specialist.py  test_model_selection.py  test_resumable_download.py  test_smart_import.py  test_token_economy.py  test_training_backends.py
trainer/: README.md  __init__.py  generate_dataset.py  pyproject.toml  restart.sh  setup.sh
trainer/app/: config.py  domains.py  evaluator.py  intel_pdf.py  main.py  pipeline.py  qa_generator.py  research.py  runs.py  scrape_agent.py  scraper.py  search.py  sources.py
trainer/app/api/: __init__.py
trainer/app/api/middleware/: __init__.py  cors.py
trainer/app/api/v1/: __init__.py  router.py
trainer/app/api/v1/endpoints/: __init__.py  admin.py
trainer/app/backends/: __init__.py  base.py  capabilities.py  mlx.py  registry.py  state.py
trainer/app/exporters/: __init__.py  gguf.py
trainer/data/: facts.yaml  learned_facts.yaml
trainer/data/domains/hardware/: facts.yaml  hardware_learned_facts.yaml
trainer/data/domains/software/: domain.yaml
trainer/data/domains/software/games/: facts.yaml  subdomain.yaml
trainer/helpers/: README.md  restart.sh  setup.sh
(+178 files in other folders)
