[project]
name = "cortex"
version = "0.1.0"
description = "Multi-agent general-purpose AI assistant with observability, evals, and guardrails"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.0",
    "langchain-google-genai>=2.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.1",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-cli[inmem]>=0.4.16",
    "langsmith[otel]>=0.7.16",
    "mcp>=1.9.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.0",
    "psycopg-pool>=3.2.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "deepeval>=3.8.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ragas>=0.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cortex"]
